Revert "fix letter spacing on large header tags"
This reverts commit 84c68c1daf752b5b1ecbfb64630263b534032194.

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -75,15 +75,3 @@ footer.bg-dark.py-5.row.d-print-none {
 html {
     font-variation-settings: 'wght' 100;
 }
-
-/**
-* Fix word spacing for large header tags
-*/
-h1,
-h2,
-h3,
-.h1,
-.h2,
-.h3 {
-    letter-spacing: -1px;
-}
